--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@react-hook/media-query": "^1.1.1",
     "@react-spring/web": "^9.7.5",
     "@studio-freight/react-lenis": "^0.0.47",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
